# tracecode-toolkit-strace

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NOTICE  NOTICE.txt  README-build-tracing.rst  README.md  README.rst  TODO.txt  appveyor.yml  azure-pipelines.yml  configure  configure.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  tracecode  tracecode.bat  vendorize.toml
docs/: README-build-tracing.rst
docs/source/: conf.py
docs/tutorial/: build-patchelf.rst
etc/: configure.py
etc/conf/: base.txt
etc/conf/dev/: base.txt
src/tracecode/: __init__.py  conf.py  pathutils.py  tracecode.py  tracer.py
src/tracecode/_vendor/: docopt.py
src/tracecode/_vendor/altgraph/: Dot.py  Graph.py  GraphAlgo.py  GraphUtil.py  ObjectGraph.py  __init__.py
src/tracecode/_vendor/altgraph-0.17.3.dist-info/: RECORD
src/tracecode/_vendor/docopt-0.6.2.dist-info/: RECORD
tests/: test_tracecode.py
tests/data/as_ops/trace/: t.2799712
tests/data/as_ops_multiplexed/: expected  trace-archive.tar.bz2
tests/data/bug1/: t.2461545
tests/data/can_parse_dup_call/trace/: bash-build01.70793
tests/data/d2d_cups_settings/: expected  sources
tests/data/d2d_multiplexed_cp/: expected  src.lst  tgt.lst
tests/data/d2d_patchelf_settings/: expected
tests/data/d2d_strace_settings/: expected  sources
tests/data/dump_patchelf/: expected.csv
tests/data/file_graph_analysis_patchelf/: expected_ints  expected_srcs  expected_tgts
tests/data/inventory/: expected
tests/data/lists_patchelf/: expected
tests/data/match_path_long/: expected.lst  paths1.lst  paths2.lst
tests/data/parse_does_not_hang/: trace-archive.tar.bz2
tests/data/parse_entry/: basic.trace  space.trace
tests/data/parse_error/: trace.1
tests/data/patchelf_command2/: expected_pformats.tar.bz2  ignored_reads.lst
tests/data/pformat_cups/: expected_pformats.tar.bz2
tests/data/pformat_grep2/: expected_pformats.tar.bz2  trace-archive.tar.bz2
tests/data/pformat_grep3/: expected_pformats.tar.bz2  trace-archive.tar.bz2
tests/data/pformat_patchelf/: expected_pformats.tar.bz2  trace-archive.tar.bz2
tests/data/pformat_strace_cleaning/: expected_pformats.tar.bz2
tests/data/pformat_strace_cleaning_dir/: expected_pformats.tar.bz2
tests/data/pformat_strace_full/: expected_pformats.tar.bz2
tests/data/pformat_strace_saved/: expected_pformats.tar.bz2  trace-archive.tar.bz2
tests/data/render_graph/: expected.dot
tests/data/render_graph_bash/: expected.dot  trace-archive.tar.bz2
tests/data/render_graph_cups/: expected.dot  trace-archive.tar.bz2
tests/data/render_graph_patchelf/: expected.dot
tests/data/render_graph_patchelf2/: expected.dot
tests/data/render_graph_strace/: expected.dot
tests/data/validate/: trace-archive.tar.bz2
tests/data/validate_out_of_order/: trace-archive.tar.bz2
(+14 files in other folders)
