[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]

norecursedirs = [
   ".git",
   "dist",
   "build",
   "_build",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "thirdparty",
   "tmp",
   "venv",
   "*/tests/data",
   ".eggs",
   "src/*/data",
   "tests/*/data"
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules",
]

[tool.black]
line-length = 100
include = '\.pyi?$'
skip_gitignore = true
extend-exclude = "migrations|data|venv"

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true
skip_gitignore = true
