[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
# no upload for now, no bdist_wheel
release = clean --all sdist --formats=bztar,zip


[pytest]
norecursedirs =
    .git
    .svn
    bin
    build
    _build
    dist
    ci
    docs
    etc
    Include
    include
    Lib
    lib
    local
    Scripts
    share
    thirdparty
    tmp

python_files = test_*.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
    --ignore docs/conf.py
    --ignore setup.py
    --ignore fabfile.py
    --doctest-modules

